RESOLVED FIXED314157
REGRESSION(310941@main): Null deref in AlternativeTextController::respondToChangedSelection when endOfWord() returns null
https://bugs.webkit.org/show_bug.cgi?id=314157
Summary REGRESSION(310941@main): Null deref in AlternativeTextController::respondToCh...
Ruthvik Konda
Reported 2026-05-05 19:58:20 PDT
REGRESSION(310941@main): Null deref in AlternativeTextController::respondToChangedSelection when endOfWord() returns null
Attachments
Ruthvik Konda
Comment 1 2026-05-05 19:58:30 PDT
Ruthvik Konda
Comment 2 2026-05-05 20:03:46 PDT
EWS
Comment 3 2026-05-07 21:31:40 PDT
Committed 312857@main (b444717fbb43): <https://commits.webkit.org/312857@main> Reviewed commits have been landed. Closing PR #64326 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.