REGRESSION(310941@main): Null deref in AlternativeTextController::respondToChangedSelection when endOfWord() returns null https://bugs.webkit.org/show_bug.cgi?id=314157 rdar://176140938

Reviewed by Megan Gardner and Ryosuke Niwa.

310941@main removed the `if (selectionPosition != endPositionOfWord) return;`
guard, which had incidentally guaranteed that `endPositionOfWord` was non-null
(since `selectionPosition` is null-checked just above). `endOfWord()` can
legitimately return a null VisiblePosition when canonicalPosition refuses to
produce a position that crosses an editable-root boundary -- for example, when
a fullscreen element creates an editable island whose parent is inert. A
default-constructed Position has anchorType() == PositionIsOffsetInAnchor, so
the existing anchorType() check does not reject the null case, and we crash
dereferencing the null result of `position.containerNode()`.

Add an explicit null check on `endPositionOfWord`, matching the established
pattern in Editor::updateMarkersForWordsAffectedByEditing. Also move the
`ASSERT(node)` to immediately after `containerNode()` -- it previously sat
after `node->document()`, where it was unreachable.

* LayoutTests/editing/mac/spelling/respond-to-changed-selection-null-end-of-word-crash-expected.txt: Added.
* LayoutTests/editing/mac/spelling/respond-to-changed-selection-null-end-of-word-crash.html: Added.
* Source/WebCore/editing/AlternativeTextController.cpp:
(WebCore::AlternativeTextController::respondToChangedSelection):

Canonical link: https://commits.webkit.org/312857@main